--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -26,7 +26,7 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-        
+
     - name: Install dependencies
       run: npm ci
 
@@ -35,3 +35,18 @@ jobs:
 
     - name: Run tests
       run: npm test
+
+    - name: Deploy to Server
+      env:
+        PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
+        HOST_IP: ${{ secrets.HOST_IP }}
+        SSH_USER: ${{ secrets.SSH_USER }}
+      run: |
+        echo "$PRIVATE_KEY" > private-key.pem
+        chmod 600 private-key.pem
+        scp -i private-key.pem -r * $SSH_USER@$HOST_IP:/home/$SSH_USER/projects/node/
+        ssh -i private-key.pem $SSH_USER@$HOST_IP << 'EOF'
+          cd /home/$SSH_USER/projects/node/hello/
+          npm install --production
+          pm2 restart index.js || pm2 start index.js --name "node-app"
+        EOF
