--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -44,9 +44,16 @@ jobs:
       run: |
         echo "$PRIVATE_KEY" > private-key.pem
         chmod 600 private-key.pem
+
+        # Fetch and add the server's SSH host key to the known_hosts file
+        ssh-keyscan -H $HOST_IP >> ~/.ssh/known_hosts
+          
+        # Now copy the files
         scp -i private-key.pem -r * $SSH_USER@$HOST_IP:/home/$SSH_USER/projects/node/
+
+        # SSH into the server and restart the app
         ssh -i private-key.pem $SSH_USER@$HOST_IP << 'EOF'
           cd /home/$SSH_USER/projects/node/hello/
-          npm install --production
+          npm install 
           pm2 restart index.js || pm2 start index.js --name "node-app"
         EOF
