--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -45,8 +45,10 @@ jobs:
         echo "$PRIVATE_KEY" > private-key.pem
         chmod 600 private-key.pem
 
+        mkdir -p ~/.ssh
+        
         # Fetch and add the server's SSH host key to the known_hosts file
-        # ssh-keyscan -H $HOST_IP >> ~/.ssh/known_hosts
+        ssh-keyscan -H $HOST_IP >> ~/.ssh/known_hosts
           
         # Now copy the files
         scp -i private-key.pem -r * $SSH_USER@$HOST_IP:/home/$SSH_USER/projects/node/hello/
