--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -45,16 +45,20 @@ jobs:
         echo "$PRIVATE_KEY" > private-key.pem
         chmod 600 private-key.pem
 
+        # Create the .ssh directory in the current user's home directory
         mkdir -p ~/.ssh
+
+        # Check if private key file was created successfully
+        cat private-key.pem
         
         # Fetch and add the server's SSH host key to the known_hosts file
         ssh-keyscan -H $HOST_IP >> ~/.ssh/known_hosts
           
         # Now copy the files
-        scp -i private-key.pem -r * $SSH_USER@$HOST_IP:/home/$SSH_USER/projects/node/hello/
+        scp -v -i private-key.pem -r * $SSH_USER@$HOST_IP:/home/$SSH_USER/projects/node/hello/
 
         # SSH into the server and restart the app
-        ssh -i private-key.pem $SSH_USER@$HOST_IP << 'EOF'
+        ssh -vvv -i private-key.pem $SSH_USER@$HOST_IP << 'EOF'
           cd /home/$SSH_USER/projects/node/hello/
           npm install 
           pm2 restart index.js || pm2 start index.js --name "node-app"
