--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -36,6 +36,9 @@ jobs:
     - name: Run tests
       run: npm test
 
+    - name: Check private key content
+      run: echo "$PRIVATE_KEY"
+
     - name: Deploy to Server
       env:
         PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
