--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -29,7 +29,7 @@ jobs:
         cache: 'npm'
 
     - name: Install dependencies
-      run: npm ci
+      run: npm i
 
     - name: Build the app (if present)
       run: npm run build --if-present
@@ -47,14 +47,15 @@ jobs:
         chmod 600 private-key.pem
 
         # Fetch and add the server's SSH host key to the known_hosts file
-        # ssh-keyscan -H $HOST_IP >> ~/.ssh/known_hosts
-          
-        # Now copy the files
-        scp -i private-key.pem -r * $SSH_USER@$HOST_IP:/home/$SSH_USER/projects/node/hello/
+        ssh-keyscan -H $HOST_IP >> ~/.ssh/known_hosts
+
+        # Copy all files except node_modules to the server
+        rsync -avz --exclude=node_modules --exclude=.git -e "ssh -i private-key.pem" . $SSH_USER@$HOST_IP:/home/$SSH_USER/projects/node/hello/
 
         # SSH into the server and restart the app
         ssh -i private-key.pem $SSH_USER@$HOST_IP << 'EOF'
           cd /home/$SSH_USER/projects/node/hello/
-          npm install 
+          npm install
           pm2 restart index.js || pm2 start index.js --name "node-app"
         EOF
+
